# accelara

./: .gitignore  GITHUB_SETUP.md  LICENSE  Makefile  README.md  SETUP.md  TAURI_MIGRATION.md  api_wrapper.py  clidm.py  electron-builder.yml  forge.config.js  go.mod  go.sum  index.html  package-lock.json  package.json  requirements.txt  test-simple.html  view-crash-logs.md  vite.config.mjs
.github/workflows/: release.yml
.temp-app/: package.json
.temp-app/electron/: database.js  main.js
browser-extension/: README.md  accelara-firefox-2.3.1.xpi
browser-extension/chrome/: background.js  content.js  icon-placeholder.txt  manifest.json  popup.html  popup.js
browser-extension/firefox/: background.js  content.js  manifest.json  popup.js
cmd/api-wrapper/: httpinfo.go  inspect.go  main.go  speedtest.go
cmd/clidm/: main.go
docs/: VIEWING_GO_LOGS.md
electron/: database.js  main.js  preload.js
internal/downloader/: http.go  options.go  torrent.go
internal/utils/: bytes.go
public/: debug-logs.html  test.html
scripts/: build-release-dmg.sh  build-tauri.sh  check-rust-compile.sh  clear-database.js  createDMG.js  download-iris.sh  package-firefox-xpi.sh  release.sh  run-go-binary.sh  run-release.sh  tail-go-logs.sh  test-resume.sh  verify-resources.js
src/: App.jsx  ErrorBoundary.jsx  electron.d.ts  index.css  main.jsx  tauri-api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: browser_server.rs  commands.rs  database.rs  download.rs  lib.rs  logger.rs  main.rs  theme.rs  update_manager.rs  updater.rs  utils.rs
src/components/: AboutModal.jsx  (+13 more)
(+4 files in other folders)
